Extract method for retrieving DASH manifest.